--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tela de Login</title>
-    <link rel="stylesheet" href="./src/css/responsivo.css">
-    <link rel="stylesheet" href="./src/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./src/css/responsivo.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+  </head>
+  <body>
     <div class="box">
-        <h2>Login</h2>
-        <p>Your Name :</p>
-        <input type="text" name="" id="">
-        <p>Your Email :</p>
-        <input type="email" name="" id="">
+      <h2>Login</h2>
+      <p>Your Name :</p>
+      <input type="text" name="" id="" />
+      <p>Your Email :</p>
+      <input type="email" name="" id="" />
 
-        <a href="#" class="btn">Sign In</a>
+      <a href="#" class="btn">Sign In</a>
 
-        <a href="#" class="pass">Forgot Password?</a>
+      <a href="#" class="pass">Forgot Password?</a>
     </div>
-</body>
+  </body>
 </html>
